feat: auth/sign-in
