# internal/controller/http/v1/errors.go
@@ -6,11 +6,16 @@ import (
 )
 
 var (
-	errInvalidRequestBody = errors.New("invalid request body")
+	errInvalidRequestBody        = errors.New("invalid request body")
+	errInvalidUsernameOrPassword = errors.New("invalid username or password")
 )
 
+type ErrorOutput struct {
+	Error string `json:"error" example:"example error"`
+}
+
 func newErrorRespond(w http.ResponseWriter, r *http.Request, code int, err error) {
-	data := map[string]string{"error": err.Error()}
+	data := &ErrorOutput{Error: err.Error()}
 
 	respond(w, r, code, data)
 }
